update about me section

--- a/about/index.html
+++ b/about/index.html
@@ -12,53 +12,87 @@ overview: true
 
             <header class="section-header">
                 <h3 class="section-title">About Me</h3>
-                <span class="section-subtitle">In 304 characters</a></span>
+                <span class="section-subtitle">General</a></span>
             </header>
 
-            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+            <p>I'm currently a graduate student studying Predictive Analytics at Northwestern University. I have a bachelors in accounting from Santa Clara University. I hail from California. Some of my hobbies include basketball, rock climbing, board games, and traveling. Also I'm really into data science and learning new things!</p>
 
         </section>
 
         <section class="page-content clearfix">
 
             <header class="section-header">
-                <h3 class="section-title">My expertise</h3>
-                <span class="section-subtitle">Stuff that i can help with</a></span>
+                <h3 class="section-title">My skills</h3>
+                <span class="section-subtitle">Stuff that i know</a></span>
             </header>
 
             <div class="one-half first">
 
-                <h4>Agile Coffee Making</h4>
-                <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+                <h4>Python</h4>
+                <p>I have experience in numpy, pandas, matplotlib.</p>
 
-                <h4>Crazy Gem Prototyping</h4>
-                <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</p>
+                <h4>R</h4>
+                <p>Generally used R for statistical purposes such as exploratory data analysis and plotting with ggplot2. Also can write functions in R.</p>
 
-                <h4>Impossible Code Debugging</h4>
-                <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
-
+                <h4>Databases</h4>
+                <p>I understand general database system theory. I am familiar with SQL and have some experience with NoSQL, namely MongoDB.</p>
+               
             </div>
 
             <div class="one-half last">
 
-                <h4>Weird Wireframing Patterns</h4>
-                <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
+                <h4>Excel</h4>
+                <p>A lot of experience using Excel for financial statement analyses. Yes, pivot tables too.</p>
 
-                <h4>Flawless Design Madness</h4>
-                <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</p>
+                <h4>Statistics</h4>
+                <p>Probability, sampling techniques, hypothesis testing, simple linear regression.</p>
 
-                <h4>Bad Time Management</h4>
-                <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+                <h4>Hadoop</h4>
+                <p>I'm certified from Cloudera in Hadoop.</p>
 
             </div>
 
         </section>
 
+ 
         <section class="page-content clearfix">
 
             <header class="section-header">
-                <h3 class="section-title">My Work</h3>
-                <span class="section-subtitle">Things that i am proud with</a></span>
+                <h3 class="section-title">My education</h3>
+                <span class="section-subtitle">Completed courses</a></span>
+            </header>
+
+            <div class="one-half first">
+
+                <h4>PREDICT 400</h4>
+                <p>Math for modelers</p>
+
+                <h4>PREDICT 401</h4>
+                <p>Intro to statistical analysis</p>
+
+                <h4>PREDICT 402</h4>
+                <p>Intro to predictive analytics</p>
+               
+            </div>
+
+            <div class="one-half last">
+
+                <h4>PREDICT 420</h4>
+                <p>Database systems and database preparation</p>
+
+                <h4>PREDICT 475</h4>
+                <p>Project management</p>
+
+            </div>
+
+        </section>
+
+<!--
+        <section class="page-content clearfix">
+
+            <header class="section-header">
+                <h3 class="section-title">My education</h3>
+                <span class="section-subtitle">Completed courses</a></span>
             </header>
 
             <ul class="projects-list clearfix">
@@ -126,7 +160,7 @@ overview: true
             </ul>
 
         </section>
-
+-->
     </div>
 
 </article>
